# burrow

./: .bzrignore  .gitreview  .pylintrc  ChangeLog  MANIFEST.in  README  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
burrow/: __init__.py  client.py  client_command.py  common.py  config.py  server.py  shell.py
burrow/backend/: __init__.py  http.py  memory.py  sqlite.py
burrow/frontend/: __init__.py  wsgi.py
burrow/openstack/common/: gettextutils.py
burrow/tests/: __init__.py  test_client.py
burrow/tests/backend/: __init__.py  test_http.py  test_memory.py  test_sqlite.py
burrow/tests/frontend/: __init__.py  test_wsgi.py
burrowd/: __init__.py  config.py
burrowd/backend/: __init__.py  memory.py  sqlite.py
burrowd/frontend/: __init__.py  wsgi.py
doc/source/: backends.rst  client.rst  common.rst  conf.py  examples.rst  frontends.rst  getting_started.rst  index.rst  introduction.rst  misc.rst  overview.rst  protocols.rst  server.rst
doc/source/_static/: basic.css
etc/: burrowd.conf
examples/: client.py  subscribe.py  worker.py  worker_fast.py
locale/: burrow.pot
test/: __init__.py  test_client.py
test/backend/: __init__.py  test_http.py  test_memory.py  test_sqlite.py
test/frontend/: __init__.py  test_wsgi.py
